practice/notes/notes.txt
D:\core java\practice\day 2\src>javac -d ../bin TestPrimitiveTypes.java
TestPrimitiveTypes.java:7: error: incompatible types: possible lossy conversion from int to byte
                byte b1=128;
                        ^
1 error

D:\core java\practice\day 2\src>

//compile time error